# stm32f4-pac-demo

./: readme.md
stm32f4/: Cargo.toml
stm32f4/src/: main.rs
testapp/: Cargo.toml
testapp/src/: main.rs
