[package]
name = "stm32f4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
critical-section = {version = "1.1.1", optional = true}
cortex-m = {version = "0.7.6"}
cortex-m-rt = { version = "0.7.2"}
vcell = "0.1.2"
panic-halt = "0.2.0"

[features]
rt = ["cortex-m-rt/device"]
critical-section=["dep:critical-section"]


